# reproject

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES.md  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELEASE_INSTRUCTIONS.md  appveyor.yml  azure-pipelines.yml  meson.build  pyproject.toml  readthedocs.yml  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: release.yml
.github/workflows/: ci_workflows.yml  publish.yml  update-changelog.yaml
docs/: Makefile  celestial.rst  conf.py  dask.rst  footprints.rst  healpix.rst  hips.rst  index.rst  installation.rst  mosaicking.rst  noncelestial.rst  performance.rst  performance_mosaicking.rst  reproject_interpolate_example.py  rtd-pip-requirements
docs/explanation/: algorithms.rst  background_matching.rst  footprints.rst
docs/howto/: align_north.rst  celestial.rst  chunked.rst  cubes.rst  dask.rst  dimensions.rst  healpix.rst  hips.rst  images.rst  mosaicking.rst  multiple_images.rst  performance.rst
docs/reference/: adaptive_options.rst  api.rst  hips_options.rst  options.rst
docs/reproject/: index.rst  reproject_interpolate_example.py
docs/resample/: api.rst  index.rst  reproject_interpolate_example.py
docs/tutorials/: first_mosaicking.rst  first_reprojection.rst
reproject/: __init__.py  _array_utils.py  _common.py  _dask_utils.py  _overlap.pyx  _overlap_wrapper.c  _wcs_utils.py  array_utils.py  common.py  compat.py  conftest.py  healpix.py  high_level.py  interpolation.py  meson.build  mosaicking.py  overlap.py  overlapArea.c  overlapArea.h  overlapAreaPP.c  reproject.py  scripts.py  setup_package.py  utils.py  wcs_utils.py
reproject/adaptive/: __init__.py  _core.py  _high_level.py  core.py  deforest.pyx  high_level.py  meson.build  setup_package.py
reproject/adaptive/tests/: meson.build  test_core.py
reproject/adaptive/tests/reference/: test_reproject_adaptive_2d.fits  test_reproject_adaptive_2d_rotated.fits  test_reproject_adaptive_roundtrip.fits  test_reproject_adaptive_uncentered_jacobian.fits
reproject/deforest/: __init__.py  core.py  deforest.pyx  high_level.py
reproject/drizzle/: __init__.py  core.py  high_level.py
reproject/drizzle/tests/: test_core.py
reproject/events/: events.py
reproject/healpix/: __init__.py  _core.py  _high_level.py  _utils.py  core.py  high_level.py  meson.build  utils.py
reproject/healpix/tests/: meson.build  setup_package.py  test_healpix.py  test_utils.py
reproject/healpix/tests/data/: reference_result.fits
reproject/hips/: __init__.py  _allsky.py  _dask_array.py  _high_level.py  _moc.py  _trim_utils.py  _utils.py  core.py  dask_array.py  high_level.py  meson.build  utils.py
reproject/hips/tests/: meson.build  test_dask_array.py  test_high_level.py  test_hips.py
reproject/interpolation/: __init__.py  _core.py  _high_level.py  core.py  core_celestial.py  core_full.py  high_level.py  interpolation.py  meson.build  utils.py
reproject/interpolation/tests/: meson.build  setup_package.py  test_core.py
reproject/interpolation/tests/baseline/: test_reproject_celestial_2d_gal2equ.fits  test_reproject_celestial_3d_equ2gal.fits  test_small_cutout.fits
reproject/interpolation/tests/reference/: test_reproject_celestial_2d_gal2equ.fits  test_reproject_celestial_3d_equ2gal.fits  test_reproject_roundtrip.fits  test_small_cutout.fits
reproject/mosaicking/: __init__.py  _background.py  _coadd.py  _subset_array.py  _wcs_helpers.py  background.py  coadd.py  meson.build  subset_array.py  wcs_helpers.py
reproject/mosaicking/tests/: meson.build  test_background.py  test_coadd.py  test_subset_array.py  test_wcs_helpers.py
reproject/mosaicking/tests/reference/: test_coadd_solar_map.fits
reproject/spherical_intersect/: __init__.py  _core.py  _high_level.py  _overlap.pyx  _reproject_core.c  core.py  high_level.py  mNaN.h  meson.build  overlap.py  overlapArea.c  reproject.py  reproject_slice_c.c  reproject_slice_c.h  setup_package.py
reproject/spherical_intersect/tests/: meson.build  test_high_level.py  test_overlap.py  test_reproject.py
reproject/tests/: helpers.py  meson.build  setup_package.py  test_array_utils.py  test_events.py  test_healpix.py  test_high_level.py  test_mosaicking.py  test_non_reprojected_dims.py  test_overlap.py  test_utils.py  test_wcs_utils.py
reproject/tests/data/: aia_171_level1.asdf  aia_171_level1.fits  cube.hdr  equatorial_3d.fits  events.fits  galactic_2d.fits  generate_asdf.py  image_with_distortion_map.fits  mwpan2_RGB_3600.hdr  reference.fits  secchi_l0_a.fits  secchi_l0_b.fits
