[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "oldest-supported-numpy",
            "cython==0.29.32"]
build-backend = 'setuptools.build_meta'

[tool.cibuildwheel]
skip = "cp36-* pp* *-musllinux* cp310-win32"
test-skip = "*-macosx_arm64 *-manylinux_aarch64"
