[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "numpy>=1.25",
            "cython>=3.0,<3.1"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "reproject/version.py"

[tool.cibuildwheel]
skip = "cp36-* pp* *-musllinux*"
test-skip = "*-macosx_arm64 *-manylinux_aarch64"

[tool.isort]
profile = "black"
multi_line_output = 3
extend_skip_glob = [
    "docs/*",
    "setup.py"]
line_length = 100
known_third_party = ["astropy"]
known_first_party = ["reproject"]
group_by_package = true
indented_import_headings = false
length_sort_sections = ["future", "stdlib"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "SS06",
    "ES01",
    "GL08",
]
