[metadata]
package_name = reproject
description = Reproject astronomical images
long_description = file: README.rst
author = Thomas Robitaille, Christoph Deil, Adam Ginsburg
author_email = thomas.robitaille@gmail.com
license = BSD
url = https://reproject.readthedocs.io
edit_on_github = False
github_project = astrofrog/reproject
version = 0.6.dev0
name = reproject

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires = numpy>=1.13
install_requires =
  numpy>=1.13
  astropy>=3.2
  astropy-healpix>=0.2
  scipy>=0.9

[options.extras_require]
test =
    pytest-astropy
    pytest-arraydiff
    pytest-cov
    pyvo
    shapely;sys_platform!='win32'
    sunpy>=1.0.5
docs =
    sphinx-astropy
    pytest
    pyvo

[options.package_data]
reproject.healpix.tests = data/*
reproject.adaptive.tests = reference/*
reproject.interpolation.tests = reference/*
reproject.mosaicking.tests = reference/*
reproject.spherical_intersect = overlapArea.h, reproject_slice_c.h, mNaN.h
reproject.tests = coveragerc, data/*

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = --arraydiff --arraydiff-default-format=fits

[ah_bootstrap]
auto_use = True

[entry_points]

[isort]
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = reproject
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_stdlib = True
