[metadata]
name = reproject
author = Thomas Robitaille, Christoph Deil, Adam Ginsburg
author_email =  thomas.robitaille@gmail.com
license = BSD 3-Clause
license_file = LICENSE
url = https://reproject.readthedocs.io
description = Reproject astronomical images
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/reproject

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  numpy>=1.13
  astropy>=3.2
  astropy-healpix>=0.2
  scipy>=1.1

[options.extras_require]
test =
    pytest-astropy
    pytest-arraydiff
    pytest-cov
    pyvo
    shapely;sys_platform!='win32' and python_version!='3.8'
    sunpy;platform_machine!='i686'
    asdf
    gwcs
docs =
    sphinx-astropy
    pytest
    pyvo
    matplotlib

[options.package_data]
reproject.healpix.tests = data/*
reproject.adaptive.tests = reference/*
reproject.interpolation.tests = reference/*
reproject.mosaicking.tests = reference/*
reproject.spherical_intersect = overlapArea.h, reproject_slice_c.h, mNaN.h
reproject.tests = data/*

[tool:pytest]
minversion = 3.1
testpaths = "reproject" "docs"
norecursedirs = build docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --arraydiff --arraydiff-default-format=fits

[coverage:run]
omit =
    reproject/_astropy_init*
    reproject/conftest.py
    reproject/*setup_package*
    reproject/tests/*
    reproject/*/tests/*
    reproject/extern/*
    reproject/version*
    */reproject/_astropy_init*
    */reproject/conftest.py
    */reproject/*setup_package*
    */reproject/tests/*
    */reproject/*/tests/*
    */reproject/extern/*
    */reproject/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[isort]
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = reproject
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_stdlib = True

[flake8]
max-line-length = 100
