[metadata]
name = reproject
author = Thomas Robitaille, Christoph Deil, Adam Ginsburg
author_email =  thomas.robitaille@gmail.com
license = BSD 3-Clause
license_files = LICENSE
url = https://reproject.readthedocs.io
description = Reproject astronomical images
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/reproject

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
  numpy>=1.17
  astropy>=4.0
  astropy-healpix>=0.6
  scipy>=1.3

[options.extras_require]
test =
    pytest-astropy
testall =
    shapely;sys_platform!='win32' and python_version!='3.8'
    sunpy[map]>=2.1;platform_machine!='i686'
    asdf
    gwcs
    pyvo
docs =
    sphinx-astropy
    pyvo
    matplotlib

[options.package_data]
reproject.healpix.tests = data/*
reproject.adaptive.tests = reference/*
reproject.interpolation.tests = reference/*
reproject.mosaicking.tests = reference/*
reproject.spherical_intersect = overlapArea.h, reproject_slice_c.h, mNaN.h
reproject.tests = data/*

[extension-helpers]
use_extension_helpers = true

[tool:pytest]
minversion = 3.1
testpaths = "reproject" "docs"
norecursedirs = build docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --arraydiff --arraydiff-default-format=fits --doctest-ignore-import-errors
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
    ignore:No observer defined on WCS:astropy.utils.exceptions.AstropyUserWarning
    ignore:unclosed file:ResourceWarning
    ignore:The conversion of these 2D helioprojective coordinates to 3D is all NaNs
    # This is a sunpy < 4.1 issue with Python 3.11
    ignore:'xdrlib' is deprecated and slated for removal in Python 3.13
    # This is a pyvo issue with Python 3.11
    ignore:'cgi' is deprecated and slated for removal in Python 3.13

[coverage:run]
omit =
    reproject/_astropy_init*
    reproject/conftest.py
    reproject/*setup_package*
    reproject/tests/*
    reproject/*/tests/*
    reproject/extern/*
    reproject/version*
    */reproject/_astropy_init*
    */reproject/conftest.py
    */reproject/*setup_package*
    */reproject/tests/*
    */reproject/*/tests/*
    */reproject/extern/*
    */reproject/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
