py.install_sources(
  '__init__.py',
  'test_background.py',
  'test_coadd.py',
  'test_subset_array.py',
  'test_wcs_helpers.py',
  subdir: 'reproject/mosaicking/tests',
)

install_data(
  'reference/test_coadd_solar_map.fits',
  install_dir: py.get_install_dir() / 'reproject/mosaicking/tests/reference',
)
